# python-polylith-example-with-pixi

./: .gitignore  README.md  pyproject.toml
projects/consumer_project/: pyproject.toml
projects/message_fastapi_project/: README.md  pyproject.toml
projects/my_aws_lambda_project/: pyproject.toml
projects/my_fastapi_project/: README.md  pyproject.toml
projects/my_gcp_function_project/: Makefile  pyproject.toml
