[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_gcp_function_project"
version = "0.1.0"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]
requires-python = ">=3.8"

[project.scripts]
consumer = "example.consumer.core:main"

[tool.polylith.bricks]
"../../bases/example/greet_gcp_function" = "example/greet_gcp_function"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"

[tool.pixi.workspace]
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
polylith-cli = ">=1.26.0,<2"

[tool.pixi.package]
name = "my_gcp_function_project"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies]
functions-framework = "~=3.5.0"

[tool.hatch.build.targets.wheel]
packages = ["example"]
